--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,9 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
+  pull_request:
+    branches: [main]
   workflow_dispatch:
 
 permissions:
@@ -12,7 +13,7 @@ permissions:
   id-token: write
 
 concurrency:
-  group: pages
+  group: "pages"
   cancel-in-progress: false
 
 jobs:
@@ -22,41 +23,35 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
+          cache: 'pip'
 
       - name: Install Python dependencies
         run: pip install markdown jinja2 beautifulsoup4
 
-      - name: Create public directory and move static files
-        run: |
-          mkdir public
-          if [ -f blog.html ]; then mv blog.html public/; fi
-          if [ -f contact.html ]; then mv contact.html public/; fi
-          if [ -f 404.html ]; then mv 404.html public/; fi
-
-      - name: Set build output to public directory
-        run: sed -i "s/OUTPUT_DIR = '.'/OUTPUT_DIR = 'public'/" build_site.py
-
-      - name: Run build_site.py
-        run: python build_site.py
-
-      - name: Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
-          cache: npm
+          node-version: '20'
+          cache: 'npm'
 
-      - name: Install dependencies
-        run: npm install
+      - name: Install Node dependencies
+        run: npm ci
 
-      - name: Build
+      - name: Create build artifacts
+        # Environment variable BUILD_OUTPUT_DIR tells build_site.py to output HTML to 'public'
+        # Vite will then find 'public/index.html' (if any) or simply copy 'public' assets to 'dist'
+        env:
+          BUILD_OUTPUT_DIR: 'public'
+        run: |
+          mkdir -p public
+          python build_site.py
+
+      - name: Build React App
         run: npm run build
-
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
@@ -69,6 +64,7 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
+    if: github.ref == 'refs/heads/main'
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
