--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dompurify": "^3.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "lenis": "^1.0.42"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
